--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:padding="16dp">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
 
     <SurfaceView
-        android:layout_width="640px"
-        android:layout_height="480px"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
         android:id="@+id/camera_view"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/code_info"
-        android:layout_toRightOf="@+id/camera_view"
-        android:textSize="20sp"
-        android:layout_marginLeft="16dp"
-        android:text="Nothing to read."
-        android:layout_alignParentTop="true"
-        />
-
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@android:color/white"
+        android:text="@string/str_nothing_to_read"
+        android:textSize="@dimen/text_size_medium" />
 </RelativeLayout>
