--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#8e8d8d</color>
+    <color name="colorPrimaryDark">#434242</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="bg_color">#d7d6d6</color>
 </resources>
